# philo

./: CMakeLists.txt  MF  Makefile  actions.c  ft_list.c  main.c  parsing.c  philo  philo.h  queue.c  queue.h  simulation.c  utils.c
